      if GATES_EXIST is set to false.
   -- Fixed bug where large maps were coring all over themselves due to
      a stack smash.  Stupid bug.
   -- Fixed another bug where regions got trashed when you managed (say
      during world creation) to create more than 10000 units in a turn.
   -- Balanced lances a bit.
   -- Now handles ultra-small worlds gracefully (either by failing to
      create the exit, or promoting some location). World creation down to
      8x8 now works.
   -- Added gamedef 'MULTI_HEX_NEXUS'.  If this is set, then on world creation
      you will be asked how many nexus hexes there should be.  The nexus
      will then be a connected strip of x hexes wide and 1 deep.   Each nexus
      hex will connect to 4 cities and to the two adjacent nexus hexes.
      New players will be started in a random nexus hex.   This does hinder
      alliances somewhat as may be harder for them to get to the same place
      in order to move to the same starting city.

TODO
----------------
   -- GIVE ALL TRADE (to give away all trade goods) (other categories for
      other obvious flags) (maybe.. there are issues with this)
   -- BUY ALL/SELL ALL
   -- Improve the item/hex editor
   -- Gamedef to handle various options around combat/weapons/bows for taxing
   -- Gamedefs for various economy options. (far future)
   -- Give more information when SHOW <item> is done.
   -- Add option to allow towers/forts/etc to allow training only a certain
      number of mages.
   -- Consider more complicated GIVE processing of 'GIVE ALL EXCEPT .....'
   -- Consider requiring both food and pay for upkeep.
   -- Merchent skill (limited number of merchents)/Limited number
      of tacticians/generals?
   -- Make errors for overwriting orders ONLY be an error if overwriting a
      NON-@ order.
   -- Find some way to allow multiple factions starting a build on the same
      turn to help.
   -- Consider some sorts of dangers for production